--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,10 @@
 ---
-output: github_document
+output: 
+    github_document:
+        pandoc_args: --webtex
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- README.md is generated from README.Rmd. Please edit README.Rmd -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -69,9 +71,22 @@ r_igraph <- make_reduced_igraph(r_mat$reduced_mat[[1]])
 plot_reduced(r_igraph)
 ```
 
-### Additional parameters for making the reduced network
+### Connection criteria for making the reduced network
 
-In the prior example, the reduced network was created using an edge density threshold.  For some applications, it may be preferred to use a degree-based measure instead.  Therefore if the average degree from block a to block b is greater than the average outdegree of the network, we will draw the edge in.
+In the prior example, the reduced network was created using an edge density threshold.  For some applications, it may be preferred to use a degree-based measure instead.  Therefore if the average degree from block a to block b is greater than the average outdegree of the network, we will draw the edge in.  To be more explicit, if $M$ is the adjacency matrix, define:
+
+$$
+X = M[(\text{elements in block i}), (\text{elements in block j})]
+$$
+
+an edge is drawn when:
+
+$$
+\langle\texttt{degree}(X)\rangle = \frac{\texttt{sum}(X)}{\texttt{nrow}(X)} > \frac{\texttt{sum}(M)}{\texttt{nrow}(M)} = \langle\texttt{degree}(M)\rangle
+$$
+Note that for this definition, $i$ and $j$ need not be exclusive.  Another definition of the average outdegree is: $\langle\texttt{degree}(X)\rangle = \texttt{mean}(\texttt{rowSums}(X))$.
+
+To use this criteria, we have created an argument `connect`.  The default to this argument is `'density'`, which does the analysis in the previous section.  To use this criterion instead, use the option `'degree'`.
 
 ```{r}
 (r_mat_deg <- make_reduced(list(a), nsplit = 1, connect = 'degree'))
@@ -162,6 +177,8 @@ plot_reduced(gred2d)
 par(mfrow = c(1,1))
 ```
 
+(YAWN!)
+
 with the multi-relation version:
 ```{r krackhardt-reduced-multi-degree}
 redbothd <- make_reduced(list(m1, m2), nsplit = 2, connect='degree')
@@ -172,6 +189,64 @@ plot_reduced(gbothd[[2]])
 par(mfrow = c(1,1))
 ```
 
+(Double YAWN!)
+
+### IDEAS to update degree criteria
+Comparing the average degree of the reduced network to the whole network has scaling problems.  At the very least, it highlights when large blocks are strongly connected to other large blocks. To think about how we might adjust this, I asked the question, "How does average degree in a uniform network depend on network size?"
+
+```{r average-degree-scaling}
+netSizes = round(10^(seq(1,3,0.5)),0)
+probs = seq(0.1,1,0.2)
+aDeg = function(size, p){
+    N = 1000
+    deg = numeric(N)
+    for(i in 1:N){
+        g = erdos.renyi.game(n=size, p = p, directed = TRUE)
+        deg[i] = mean(degree(g, mode = 'out'))
+    }
+    aDeg = mean(deg)
+    return(aDeg)
+}
+
+library(viridis)
+pcols = viridis(length(probs))
+plot(netSizes,netSizes,type='n',xlab = 'Network Size', ylab = 'average degree',log='xy',
+     xlim=c(10,1000),ylim=c(0.1,1000))
+if(!file.exists('avgDegree.RData')){
+    avgDegree = matrix(nrow = length(netSizes), ncol = length(probs))
+    for(i in 1:length(probs)){
+        p = probs[i]
+        aDegree = mapply(aDeg,netSizes,p)
+        avgDegree[ ,i] = aDegree
+        points(netSizes,aDegree,col=pcols[i],pch=i)
+        abline(b=probs[i],a=0,col=pcols[i],lty=i, untf = TRUE)
+    }
+    save(avgDegree,file='avgDegree.RData')
+}else{
+    load('avgDegree.RData')
+    for(i in 1:length(probs)){
+        aDegree = avgDegree[ ,i] 
+        points(netSizes,aDegree,col=pcols[i],pch=i)
+        abline(b=probs[i],a=0,col=pcols[i],lty=i, untf = TRUE)
+    }
+}
+legend('topleft',legend = paste("p =",probs),col=pcols,pch=1:length(probs),
+       lty=1:length(probs))
+```
+
+So, for uniform networks anyway, average degree scales with network size (and the scaling factor is the probability for a tie to form).  As a zeroth order approximation it would seem that we should scale the condition by relative network sizes.  I propose two ideas that I will expand on when we meet.
+
+#### IDEA 1:
+
+$$
+\frac{\langle\texttt{degree}(X)\rangle}{\texttt{nrow}(X)} > \frac{\langle\texttt{degree}(M)\rangle}{\texttt{nrow}(M)}
+$$
+
+#### IDEA 2:
+
+$$
+\frac{\langle\texttt{degree}(X)\rangle}{\texttt{ncol}(X)} > \frac{\langle\texttt{degree}(M)\rangle}{\texttt{ncol}(M)}
+$$
 
 ## Acknowledgments
 This work was supported by National Science Foundation awards [DUE-1712341](https://www.nsf.gov/awardsearch/showAward?AWD_ID=1712341) and [DUE-1711017](https://www.nsf.gov/awardsearch/showAward?AWD_ID=1711017). 
